--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -9,22 +9,170 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Buscar"/>
+        android:text="Buscar por"
+        android:fontFamily="@font/bold"
+        android:textSize="35sp"
+        android:textAlignment="center"
+        android:layout_marginTop="20dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"/>
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <RadioButton
+                android:id="@+id/rbt1"
+                android:layout_width="80dp"
+                android:checked="true"
+                android:layout_height="match_parent"
+                android:text="ID"
+                android:layout_marginRight="30dp"
+                android:fontFamily="@font/medium"
+                android:textSize="25sp"/>
+            <RadioButton
+                android:id="@+id/rbt2"
+                android:layout_width="140dp"
+                android:layout_height="match_parent"
+                android:text="Nombre"
+                android:fontFamily="@font/medium"
+                android:textSize="25sp"/>
+        </RadioGroup>
 
+        <EditText
+            android:id="@+id/campoid"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="40dp"
+            android:fontFamily="@font/regular"
+            android:hint="Buscar"
+            android:textSize="25sp" />
 
+        <Button
+            android:id="@+id/btnbuscar"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:layout_marginLeft="40dp"
+            android:onClick="onClick"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="10dp"
+            android:fontFamily="@font/extrabold"
+            android:text="Buscar"
+            android:textSize="20sp" />
 
+        <EditText
+            android:id="@+id/camponom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_margin="15dp"
+            android:fontFamily="@font/semibold"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
+        <EditText
+            android:id="@+id/campopie"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_margin="15dp"
+            android:fontFamily="@font/semibold"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:rowCount="1"
+            android:columnCount="2"
+            android:layout_margin="10dp"
+            android:columnOrderPreserved="false">
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardeditar"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:onClick="onClick"
+                android:visibility="gone"
+                android:layout_row="0"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="@color/gray"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/color1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/edit" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/bold"
+                        android:text="Editar"
+                        android:textColor="@color/white"
+                        android:textSize="25sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardeliminar"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:onClick="onClick"
+                android:visibility="gone"
+                android:layout_row="0"
+                android:layout_rowWeight="1"
+                android:layout_column="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill"
+                android:layout_margin="10dp"
+                app:cardBackgroundColor="@color/gray"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="5dp"
+                app:cardUseCompatPadding="true">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/color1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/eliminar" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:fontFamily="@font/bold"
+                        android:text="Eliminar"
+                        android:textColor="@color/white"
+                        android:textSize="25sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </GridLayout>
     </LinearLayout>
-
 </ScrollView>
