--- a/app/src/main/res/layout/activity_crear.xml
+++ b/app/src/main/res/layout/activity_crear.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/colorAccent"
     android:layout_height="match_parent"
     tools:context=".Crear"
     android:orientation="vertical">
@@ -52,38 +51,9 @@
             android:layout_marginTop="25dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
+            android:onClick="onClick1"
             android:fontFamily="@font/medium"
             android:text="Guardar"
             android:textSize="30sp" />
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="80dp"
-            android:layout_marginLeft="80dp"
-            android:layout_marginBottom="40dp"
-            app:cardBackgroundColor="@color/gray"
-            app:cardCornerRadius="25dp"
-            app:cardElevation="5dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical">
-                <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/add" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Agregar piezas"
-                    android:textSize="25sp" />
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
     </LinearLayout>
-
-
 </ScrollView>
