--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -9,13 +9,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="left">
+        android:gravity="left"
+        android:onClick="ini">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginRight="100dp"
-            android:src="@drawable/logo2"
-            android:onClick="ini"/>
+            android:src="@drawable/logo2"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
