--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -1,9 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Compartir">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_margin="30dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="Compartir Colecciones"
+            android:textAlignment="center"
+            android:layout_marginTop="15dp"
+            android:textSize="30sp"
+            android:fontFamily="@font/extrabold"/>
+
+
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="22dp"
+            android:text="Seleccione colección: "
+            android:textSize="15sp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/regular"/>
+        <Spinner
+            android:id="@+id/spinercolecciones"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"/>
+        <EditText
+            android:id="@+id/etmicorreo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Para"
+            android:textSize="25dp"
+            android:paddingLeft="20dp"
+            android:fontFamily="@font/medium"/>
+        <EditText
+            android:id="@+id/etpara"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="CC"
+            android:textSize="25dp"
+            android:paddingLeft="20dp"
+            android:fontFamily="@font/medium"/>
+        <EditText
+            android:id="@+id/etasunto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Asunto"
+            android:textSize="25dp"
+            android:paddingLeft="20dp"
+            android:fontFamily="@font/medium"/>
+        <EditText
+            android:id="@+id/etdescripcion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Descripcion"
+            android:textSize="25dp"
+            android:paddingLeft="20dp"
+            android:fontFamily="@font/medium"/>
+        <Button
+            android:id="@+id/btnenviar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:onClick="sendEmail"
+            android:text="Enviar"
+            android:fontFamily="@font/regular"
+            android:textSize="25sp"/>
+    </LinearLayout>
+</ScrollView>
