--- a/app/src/main/res/drawable/color2.xml
+++ b/app/src/main/res/drawable/color2.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <gradient
-    android:startColor="#8A2387"
-    android:centerColor="#E94057"
-    android:endColor="#F27121"
-    android:angle="45"/>
+    android:startColor="#c31432"
+    android:endColor="#240b36"
+    android:angle="135"/>
 </shape>
