--- a/app/src/main/res/drawable/color3.xml
+++ b/app/src/main/res/drawable/color3.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <gradient
-    android:startColor="#8A2387"
-    android:centerColor="#E94057"
-    android:endColor="#F27121"
-    android:angle="45"/>
+    android:startColor="#40E0D0"
+    android:centerColor="#FF8C00"
+    android:endColor="#FF0080"
+    android:angle="135"/>
 </shape>
