--- a/app/src/main/res/drawable/color4.xml
+++ b/app/src/main/res/drawable/color4.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 <gradient
-    android:startColor="#8A2387"
-    android:centerColor="#E94057"
-    android:endColor="#F27121"
+    android:startColor="#8360c3"
+    android:endColor="#2ebf91"
     android:angle="45"/>
 </shape>
