--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
     tools:context=".Agregar">
     <LinearLayout
@@ -15,6 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:text="Agregar Piezas"
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:layout_marginTop="15dp"
         android:textSize="30sp"
@@ -22,6 +24,7 @@
     <TextView
         android:layout_width="200dp"
         android:layout_height="22dp"
+        android:textColor="@color/gray"
         android:text="Seleccione colección: "
         android:textSize="15sp"
         android:layout_marginLeft="15dp"
@@ -38,6 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="@color/gray"
+        android:textColorHint="@color/gray"
         android:hint="Codigo"
         android:textSize="25dp"
         android:paddingLeft="20dp"
@@ -47,6 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="@color/gray"
+        android:textColorHint="@color/gray"
         android:hint="Nombre"
         android:textSize="25dp"
         android:paddingLeft="20dp"
@@ -57,6 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:text="Guardar Pieza"
+        android:background="@drawable/color4"
         android:onClick="onClick2"
         android:fontFamily="@font/regular"
         android:textSize="25sp"/>
