--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
     tools:context=".Compartir">
     <LinearLayout
@@ -14,19 +15,18 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
+            android:textColor="@color/white"
             android:text="Compartir Colecciones"
             android:textAlignment="center"
             android:layout_marginTop="15dp"
             android:textSize="30sp"
             android:fontFamily="@font/extrabold"/>
-
-
-
         <TextView
             android:layout_width="200dp"
             android:layout_height="22dp"
             android:text="Seleccione colección: "
             android:textSize="15sp"
+            android:textColor="@color/gray"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="40dp"
             android:fontFamily="@font/regular"/>
@@ -34,12 +34,14 @@
             android:id="@+id/spinercolecciones"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp" />
         <EditText
             android:id="@+id/etmicorreo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:hint="Para"
             android:textSize="25dp"
             android:paddingLeft="20dp"
@@ -49,6 +51,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:hint="CC"
             android:textSize="25dp"
             android:paddingLeft="20dp"
@@ -58,6 +62,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:hint="Asunto"
             android:textSize="25dp"
             android:paddingLeft="20dp"
@@ -68,6 +74,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="Descripcion"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:textSize="25dp"
             android:paddingLeft="20dp"
             android:fontFamily="@font/medium"/>
@@ -76,6 +84,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="30dp"
+            android:background="@drawable/color3"
             android:onClick="sendEmail"
             android:text="Enviar"
             android:fontFamily="@font/regular"
