--- a/app/src/main/res/layout/activity_crear.xml
+++ b/app/src/main/res/layout/activity_crear.xml
@@ -3,19 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
     tools:context=".Crear"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="20dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:text="Crear nueva Colección"
             android:fontFamily="@font/extrabold"
-            android:textSize="35sp"
+            android:textSize="25sp"
             android:textAlignment="center"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="30dp"/>
@@ -24,6 +27,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/light"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:layout_margin="20dp"
             android:hint="Nombre de Colección"
             android:textSize="25sp" />
@@ -32,6 +37,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:fontFamily="@font/light"
             android:hint="Numero de piezas"
             android:inputType="number"
@@ -42,6 +49,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/light"
             android:layout_margin="20dp"
+            android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:hint="Codigo correlativo"
             android:inputType="number"
             android:textSize="25sp" />
@@ -50,10 +59,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
             android:layout_marginLeft="50dp"
+            android:background="@drawable/color2"
+            android:textColor="@color/white"
             android:layout_marginRight="50dp"
             android:onClick="onClick1"
             android:fontFamily="@font/medium"
             android:text="Guardar"
-            android:textSize="30sp" />
+            android:textSize="20sp" />
     </LinearLayout>
 </ScrollView>
