--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/degra"
+    android:background="@drawable/degra2"
     tools:context=".Inicio">
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,8 +14,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginRight="100dp"
-            android:src="@drawable/logo2"/>
+            android:layout_margin="100dp"
+            android:src="@drawable/fondoinicio"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
