--- a/app/src/main/res/layout/activity_mostrapieza.xml
+++ b/app/src/main/res/layout/activity_mostrapieza.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context=".Mostrapieza">
 
@@ -12,6 +13,7 @@
         android:layout_height="40dp"
         android:layout_margin="5dp"
         android:text="Piezas"
+        android:textColor="@color/white"
         android:textSize="30sp"
         android:textAlignment="center"
         android:fontFamily="@font/extrabold"/>
@@ -19,6 +21,7 @@
         android:id="@+id/box1"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/regular"
+        android:textColor="@color/gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"/>
@@ -26,6 +29,7 @@
         android:id="@+id/box2"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/regular"
+        android:textColor="@color/gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="15sp"/>
@@ -33,8 +37,10 @@
         android:id="@+id/box3"
         android:layout_marginLeft="15dp"
         android:fontFamily="@font/regular"
+        android:textColor="@color/gray"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:textSize="15sp"/>
     <ListView
         android:id="@+id/listViewTabla2"
