--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent"
     tools:context=".Registro">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_margin="5dp"
+            android:layout_margin="15dp"
             android:text="Colecciones"
             android:textSize="30sp"
+            android:textColor="@color/white"
             android:textAlignment="center"
             android:fontFamily="@font/extrabold"/>
         <ListView
